# tap-sap-hana

./: .gitignore  README.md  pyproject.toml
tap_sap_hana/: client.py  tap.py
tap_sap_hana/tests/: __init__.py  test_core.py
