[tool.poetry]
name = "tap-sap-hana"
version = "0.0.1"
description = "`tap-sap-hana` is a Singer tap for sap-hana, built with the Meltano Singer SDK."
authors = ["Dimitar Petrunov"]
keywords = [
    "ELT",
    "sap-hana",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.11,>=3.7.1"
singer-sdk = "^0.16.0"
sqlalchemy = "^1.4.45"
sqlalchemy-hana = "^0.5.0"
cryptography = "^37.0.4"
hdbcli = "^2.5.17"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
tox = "^3.24.4"
flake8 = "^3.9.2"
black = "^21.9b0"
pydocstyle = "^6.1.1"
mypy = "^0.910"
types-requests = "^2.26.1"
isort = "^5.10.1"

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "tap_sap_hana"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-sap-hana = 'tap_sap_hana.tap:TapSapHana.cli'
